Fixed some alignment issues with My Ponies and added margins to card container

--- a/ponyproject/ponyapp/static/styles/sweet_style.css
+++ b/ponyproject/ponyapp/static/styles/sweet_style.css
@@ -57,8 +57,10 @@ h1, h4 {
 /* FLEX CONTAINER FOR CARDS */
 .card-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* PONY CARDS */
